UI: Show avatar (or color + initial) in chat header
UI: Adapt initials according to font size
UI: Viewer page for avatar images
UI: Allow to mute accounts
UI: Show counter for new messages in other accounts
UI: Remove setting for notification aggregation.
UI: Allow removal of contacts via list of contacts when creating a new chat
Bugfix: Set new message count of unconfigured account to zero
Other: Handle URLs passed to the app
Other: Limit detailed notifications to 9 per account, use summary if beyond
Other: Move notification code into separate class
Other: Enable notifications via org.freedesktop.Notification DBus service
Other: Use deltachat-core-rust v1.137.3
Other: Patch for building deltachat-core-rust no longer needed


1.4.0 2024-03-06
UI: Reactions (send and display)
UI: Show progress bar while adding account as second device
UI: Enable swipe actions for informational messages
UI: Move "cancel" action in headers to the left (away from "ok" action)
UI: Refactor "Add Chat" page for alignment with DC Android
UI: Don't show additional summarytext for messages with attached file
UI: Don't show email address of own account in chatlist page header
UI: Move "pinned" icon to the right side of the date
UI: Slightly enlarge clickbox + icon for password hidden/clear view toggle
UI: Add button to jump to top in chat list
UI: Option to show contact requests in account switcher
UI: Images now auto-rotate according to EXIF data
Bugfix: Copy to clipboard now reliable
Bugfix: Adapt size of chatlist in the archive
Bugfix: When adding new contact, button to scan QR code now works on phone as well as on desktop
Bugfix: Under certain circumstances, a popup regarding account en- or decryption appeared on each startup
Other: Use deltachat-core-rust v1.136.1
Other: Refactoring for app to be more responsive when receiving a lot of messages
Other: Don't restart IO when switching accounts
Other: Build lib deltachat-core-rust out of tree